# cashu-fault-lab

./: .dockerignore  .env.example  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.build.json  turbo.json
.github/workflows/: ci.yml  nightly.yml  release.yml  weekly.yml
adapters/cashu-ts/: README.md  package.json  tsconfig.build.json
adapters/cdk/: Cargo.toml  README.md
adapters/cdk/src/: contract.rs  funded.rs  funded_wallet.rs  http_transport.rs  lib.rs  main.rs  server.rs
adapters/cdk/tests/: contract.rs  docker_funded.rs  funded.rs
adapters/template/: Dockerfile  README.md  package.json
apps/http-fault-gateway/: README.md  package.json
apps/lab-cli/: README.md  package.json
apps/nostr-fault-relay/: README.md  package.json
apps/reference-receiver/: README.md  package.json
apps/reference-sender/: README.md  package.json
docs/: adapter-guide.md
docs/adrs/: 001-delivery-semantics.md
infra/compose/: cdk-mint.compose.yml  lab.compose.yml  mint.compose.yml  nutshell.compose.yml  postgres.compose.yml  wallet-adapters.compose.yml
infra/docker/: wallet-adapters.Dockerfile
infra/migrations/: 001_receiver.sql  002_prepared_recovery_index.sql
scenarios/concurrency/: cross-transport-storm.json  duplicate-storm.json
scenarios/conformance/: conflict-delivery.json  (+6 more)
scripts/: browser-cors-probe.mjs  clean.sh  dev-up.sh
spec/: delivery-v1.md  invariants.md  openapi.yaml  threat-model.md  upstream-lock.json
(+149 files in other folders)
