[package]
name = "cashu-fault-lab-cdk-adapter"
version = "0.0.0"
edition = "2024"
rust-version = "1.97"
publish = false

[dependencies]
axum = "=0.8.9"
cdk = { version = "=0.17.3", default-features = false }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.53.0", features = ["macros", "net", "rt-multi-thread", "signal"] }

[dev-dependencies]
tower = { version = "=0.5.3", features = ["util"] }
