[package]
name = "cashu-fault-lab-cdk-adapter"
version = "0.0.0"
edition = "2024"
rust-version = "1.97"
publish = false

[dependencies]
async-trait = "=0.1.91"
axum = "=0.8.9"
base64 = "=0.22.1"
bitcoin = "=0.32.102"
cdk = { version = "=0.17.3", default-features = false, features = ["wallet"] }
cdk-sqlite = "=0.17.3"
ciborium = "=0.2.2"
getrandom = "=0.3.4"
hex = "=0.4.3"
reqwest = { version = "=0.12.28", default-features = false, features = ["rustls-tls"] }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.53.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
url = "=2.5.8"

[dev-dependencies]
tower = { version = "=0.5.3", features = ["util"] }
